fixed spacing

--- a/07week/Checkpoint2/css/style.css
+++ b/07week/Checkpoint2/css/style.css
@@ -1,4 +1,4 @@
-body { 
+body {
   background-image: linear-gradient(to top, #feada6 0%, #f5efef 100%);
   background-size: 50px 1000px;
 }
@@ -25,10 +25,8 @@ body {
 .grid-container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3,1fr);
-  grid-template-areas: "box-1"
-             "box-2"
-             "box-3";
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas: "box-1" "box-2" "box-3";
 }
 
 .box {
